syntax = "proto3";

package daprexamples;

option java_outer_classname = "GrpcStateServiceProtos";
option java_package = "com.ivansoft.java.dapr.examples.stateservice";

service ServiceState {
  rpc SaveState (SaveStateRequest) returns (Response) {}
  rpc GetState (GetStateRequest) returns (GetStateResponse) {}
}

message SaveStateRequest {
  string key = 1;
  string value = 2;
}

message GetStateRequest {
  string key = 1;
}

message Response {
  string status = 1;
}

message GetStateResponse {
    Response response = 1;
    string value = 2;
}
